# tugtool

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  calc.c  clippy.toml  rust-toolchain.toml
crates/tug-launch/: Cargo.toml
crates/tug-launch/src/: main.rs
crates/tugcode/: Cargo.toml
crates/tugcode/src/: main.rs
crates/tugcode/tests/: agent_integration_tests.rs  beads_integration_tests.rs  cli_integration_tests.rs  worktree_integration_tests.rs
crates/tugtool/: Cargo.toml  build.rs
crates/tugtool-core/: Cargo.toml
crates/tugtool-core/src/: adapter.rs  beads.rs  config.rs  error.rs  filter.rs  lib.rs  output.rs  patch.rs  sandbox.rs  session.rs  text.rs  types.rs  validator.rs  workspace.rs  worktree.rs
crates/tugtool-core/tests/: beads_tests.rs
crates/tugtool-cst/: Cargo.toml
crates/tugtool-cst-derive/: Cargo.toml
crates/tugtool-cst-derive/src/: lib.rs  parenthesized_node.rs
crates/tugtool-cst/benches/: parser_bench.rs
crates/tugtool-cst/examples/: parse_example.rs
crates/tugtool-cst/src/: lib.rs  version.rs
crates/tugtool-cst/tests/: golden.rs  parser_roundtrip.rs  roundtrip.rs
crates/tugtool-python/: Cargo.toml
crates/tugtool-python-cst-derive/: Cargo.toml
crates/tugtool-python-cst-derive/src/: cstnode.rs  inflate.rs
crates/tugtool-python/src/: alias.rs  analyzer.rs  bootstrap.rs  cross_file_types.rs  cst_bridge.rs  dynamic.rs  env.rs  error_bridges.rs  files.rs  lib.rs  libcst_worker.py  lookup.rs  mro.rs  stubs.rs  test_helpers.rs  test_utils.rs  type_narrowing.rs  type_tracker.rs  types.rs  validation.rs  verification.rs  worker.rs
crates/tugtool-python/tests/: acceptance_criteria.rs  binding_snapshots.rs  rename_batch_editor_migration.rs  rename_collision_tests.rs  rename_hardening.rs  rename_param_integration.rs  rename_type_comments.rs  visitor_equivalence.rs
crates/tugtool/src/: cli.rs  filter.rs  fixture.rs  lib.rs  main.rs  mcp.rs  output.rs  splash.rs  testcmd.rs
crates/tugtool/tests/: agent_integration_tests.rs  api_surface.rs  beads_integration_tests.rs  cli_integration_tests.rs  fixture_cli_e2e.rs  fixture_list_status_integration.rs  golden_tests.rs  python_env_test.rs  python_fixtures.rs  temporale_integration.rs  worktree_integration_tests.rs
sample-code/python/temporale/: pyproject.toml
tugcode/: Cargo.toml  Justfile  bunfig.toml  capabilities.test.ts  package.json  probe-btw-overlap.ts  probe-case-a-race.ts  probe-case-a.ts  probe-compact.ts  probe-fresh.ts  probe-image.ts  probe-interrupt.ts  probe-model.ts  probe-multi.ts  probe-overlap.ts  probe-raw-claude.ts  probe-raw-stdin.ts  probe-resume.ts  probe-session.ts  probe-skill.ts  probe-tool-overlap.ts  probe-websocket.ts  probe.ts  tsconfig.json
tugcode/.tugtool/: config.toml  tugplan-skeleton.md
tugcode/Formula/: tugcode.rb
tugcode/crates/tugbank/: Cargo.toml
tugcode/crates/tugbank-core/: Cargo.toml
tugcode/crates/tugbank-ffi/: Cargo.toml
tugcode/crates/tugcast/: Cargo.toml  build.rs
tugcode/crates/tugcode/: Cargo.toml  build.rs
tugcode/crates/tugrelaunch/: Cargo.toml
tugcode/crates/tugtool/: Cargo.toml
tugcode/crates/tugtool-core/: Cargo.toml
tugcode/probes/btw/: FINDINGS.md  capture-btw-control-2026-07-09T00-53-51-510Z.meta.json  capture-btw-control-2026-07-09T00-53-51-510Z.stdout  probe-btw-control.mjs
tugcode/probes/goal-loop/: FINDINGS.md  capture-btw-2026-07-08T15-05-07-785Z.meta.json  capture-btw-2026-07-08T15-05-07-785Z.stdout  capture-goal-2026-07-08T14-58-18-964Z.meta.json  capture-goal-2026-07-08T14-58-18-964Z.stdout  capture-loop-interval-2026-07-08T15-04-34-180Z.stdout  capture-loop-meta-2026-07-08T15-04-34-180Z.json  capture-loop-resume-goal-phase1-2026-07-08T15-04-34-180Z.stdout  capture-loop-resume-goal-phase2-2026-07-08T15-04-34-180Z.stdout  capture-loop-resume-sw-phase1-2026-07-08T15-04-34-180Z.stdout  capture-loop-resume-sw-phase2-2026-07-08T15-04-34-180Z.stdout  capture-loop-self-2026-07-08T15-04-34-180Z.stdout  probe-btw.mjs  probe-goal.mjs  probe-loop.mjs
tugcode/probes/wake-investigation/: analyze.mjs  capture-cron-1m-2026-05-25T14-25-40-894Z.stdout  capture-resume-meta-2026-05-25T15-44-04-036Z.json  capture-resume-phase1-2026-05-25T15-44-04-036Z.stderr  capture-resume-phase1-2026-05-25T15-44-04-036Z.stdout  capture-resume-phase2-2026-05-25T15-44-04-036Z.stderr  capture-resume-phase2-2026-05-25T15-44-04-036Z.stdout  capture-sw-60-2026-05-25T14-25-36-113Z.jsonl  capture-sw-60-2026-05-25T14-25-36-113Z.stdout  probe-harness.mjs  probe-resume.mjs  probe-tugcode.mjs
tugcode/scripts/: benchmark-context-tokenizer.ts  build-app.sh  investigate-jsonl-flush-timing.ts  release.sh  replay-corpus-audit.ts  run-e1-batch.ts  update-homebrew-formula.sh
tugcode/src/: capabilities.ts  claude-code-settings.ts  context-breakdown.ts  control.ts  hooks-inventory.ts  inbound-dispatch.ts  ipc.ts  main.ts  permissions.ts  protocol-types.ts  pulse-facts.ts  replay.ts  scheduler.ts  session-lifecycle-log.ts  session.ts  skills-inventory.ts  stub-replay.ts  subagent-tail.ts  terminal-liveness.ts  tokenizer.ts  tugbank-client.ts  types.ts  web-components.ts
tugcode/src/__tests__/: activity-counting.test.ts  capabilities-version.test.ts  capture-ipc.ts  claude-code-settings.test.ts  compact-summary-capture.test.ts  context-breakdown.test.ts  control.test.ts  effort-respawn-mode.test.ts  goal-feedback.test.ts  hooks-inventory.test.ts  inbound-dispatch.test.ts  inflight-turn-snapshot.test.ts  lane-partition-interleave.test.ts  main.test.ts  map-stream-event-block-index.test.ts  perf-instrumentation.test.ts  permissions.test.ts  (+49 more)
tugcode/tests/: README.md
tugdeck/crates/: Cargo.toml
tugrust/: .gitignore  Cargo.toml  Justfile
tugrust/.cargo/: config.toml
tugrust/.config/: nextest.toml
tugrust/scripts/: assign-bundle-id.sh  branch-slug.sh  build-app.sh  build-release-inputs.sh  bundle-id-from-cwd.sh  capture-build-info.sh  derived-data-path.sh  fetch-tmux.sh  instance-id-from-cwd.sh  notarize.sh  product-name-from-cwd.sh  quit-tug-bundle.sh  sign-bundle.sh  version.sh
(+4890 files in other folders)
