# Root Cargo.toml - VIRTUAL WORKSPACE
# All crates are now in crates/ directory

[workspace]
resolver = "2"
members = [
    "crates/tugtool",
    "crates/tugtool-core",
    "crates/tugtool-python-cst",
    "crates/tugtool-python-cst-derive",
    "crates/tugtool-python",
    "crates/tugtool-rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ken Kocienda"]
license = "MIT"
repository = "https://github.com/tugtool/tugtool"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
collapsible_if = "allow"

# NO [package] section - this is now a virtual workspace
# NO [dependencies] section - dependencies are in individual crates

[profile.release]
lto = "thin"
debug = "line-tables-only"

[profile.dev]
debug = 1
incremental = true
codegen-units = 256
lto = false
panic = "unwind"

[profile.test]
debug = 1
incremental = true
lto = false
