[workspace]
resolver = "2"
members = ["crates/tugtool", "crates/tugtool-core"]

[workspace.package]
version = "0.5.7"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Regex for parsing
regex = "1"

# Directory paths
dirs = "5"

# Testing
tempfile = "3"

# Internal crates
tugtool-core = { path = "crates/tugtool-core" }
