[workspace]
resolver = "2"
members = ["crates/tugcode", "crates/tugtool-core", "crates/tugcast", "crates/tugcast-core", "crates/tugtool", "crates/tugrelaunch"]

[workspace.package]
version = "0.7.10"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time utilities
chrono = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Atomic shared state
arc-swap = "1"

# Regex for parsing
regex = "1"

# Directory paths
dirs = "5"

# Testing
tempfile = "3"

# State management
rusqlite = { version = "0.33", features = ["bundled"] }
sha2 = "0.10"

# Internal crates
tugtool-core = { path = "crates/tugtool-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }

# Async utilities
async-trait = "0.1"
tokio-util = "0.7"
futures = "0.3"

# PTY management
pty-process = { version = "0.5", features = ["async"] }

# Filesystem watching
notify = "8"
ignore = "0.4"
glob = "0.3"

# URL encoding
percent-encoding = "2.3"

# Random generation
rand = "0.10"

# Asset embedding
rust-embed = { version = "8", features = ["interpolate-folder-path"] }

# System interfaces
libc = "0.2"
sysinfo = "0.34"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing utilities
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.28"
http-body-util = "0.1"
