[workspace]
resolver = "2"
members = ["crates/tugutil", "crates/tugutil-core", "crates/tugdash-core", "crates/tugchanges-core", "crates/tugcast", "crates/tugcast-core", "crates/tugexec", "crates/tugrelaunch", "crates/tugbank-core", "crates/tugbank", "crates/tuglog", "crates/tugcore"]

[workspace.package]
version = "0.8.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
# raw_value: lets the external-session scanner capture a record's `message`
# as an unparsed slice and only build a JSON tree for the few user lines it
# inspects, instead of fully parsing every (often multi-MB) line.
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"

# Time utilities
chrono = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Atomic shared state
arc-swap = "1"

# Regex for parsing
regex = "1"

# Data parallelism (work-stealing thread pool)
rayon = "1"

# Directory paths
dirs = "5"

# Testing
tempfile = "3"
assert_cmd = "2"

# Binary encoding
base64 = "0.22"

# Internal binary crates
tugbank-core = { path = "crates/tugbank-core" }
tugcore = { path = "crates/tugcore" }

# State management
rusqlite = { version = "0.33", features = ["bundled"] }
sha2 = "0.10"

# Internal crates
tugutil-core = { path = "crates/tugutil-core" }
tugdash-core = { path = "crates/tugdash-core" }
tugchanges-core = { path = "crates/tugchanges-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Async utilities
async-trait = "0.1"
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

# PTY management
pty-process = { version = "0.5", features = ["async"] }

# Filesystem watching
notify = "8"
ignore = "0.4"
glob = "0.3"

# URL encoding
percent-encoding = "2.3"

# Random generation
rand = "0.10"

# System interfaces
libc = "0.2"
sysinfo = "0.34"

# Logging and tracing
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tuglog = { path = "crates/tuglog" }

# Testing utilities
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.28"
http-body-util = "0.1"

# The external-session scan streams multi-GB JSONL at picker-open time;
# unoptimized serde is ~12x slower than release and turns a ~1.5s cold
# scan into ~17s on dev builds. Optimizing just the serde stack (and the
# std readers they lean on) recovers most of it without touching tugcast's
# own debuggability or build time.
[profile.dev.package.serde]
opt-level = 3

[profile.dev.package.serde_json]
opt-level = 3

[profile.dev.package.memchr]
opt-level = 3

[profile.dev.package.ryu]
opt-level = 3

[profile.dev.package.itoa]
opt-level = 3
