[package]
name = "tugtool-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core infrastructure for tugtool: patch IR, facts, session, workspace, sandbox"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"

[lints]
workspace = true
