# Python CST parser for tugtool
# Adapted from LibCST's Rust core, with PyO3 code removed

[package]
name = "tugtool-cst"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A Python parser and Concrete Syntax Tree library for tugtool."

[lib]
name = "tugtool_cst"

[features]
default = []
trace = ["peg/trace"]

[dependencies]
paste = "1.0"
thiserror = "2.0"
peg = "0.8"
annotate-snippets = "0.11"
regex = "1.11"
memchr = "2.7"
tugtool-cst-derive = { path = "../tugtool-cst-derive" }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
difference = "2.0"
rayon = "1.11"
itertools = "0.14"

# Must define lints manually because we need to override mismatched_lifetime_syntaxes
[lints.rust]
warnings = "deny"
# LibCST code uses lifetime elision patterns that trigger this lint
mismatched_lifetime_syntaxes = "allow"

[lints.clippy]
all = { level = "deny", priority = -1 }
collapsible_if = "allow"
