[package]
name = "tugtool-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Python language support for tugtool using native Rust CST parser"

[dependencies]
tugtool-core = { path = "../tugtool-core" }
tugtool-python-cst = { path = "../tugtool-python-cst" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tempfile = "3"
tracing = "0.1"
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[lints]
workspace = true
