[project]
name = "temporale"
version = "0.1.0"
description = "A Python datetime library for testing refactoring tools"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
