[package]
name = "tugbank"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Command-line tool for inspecting and manipulating tugbank databases"

[[bin]]
name = "tugbank"
path = "src/main.rs"

[dependencies]
tugbank-core.workspace = true
clap.workspace = true
serde_json.workspace = true
dirs.workspace = true
base64.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
serde_json.workspace = true
