[package]
name = "tugcast"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[[bin]]
name = "tugcast"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
pty-process = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
tugcast-core = { path = "../tugcast-core" }

[dev-dependencies]
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
http-body-util = { workspace = true }
tempfile = { workspace = true }
