[package]
name = "tugcode"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "From ideas to implementation via multi-agent orchestration"

[[bin]]
name = "tugcode"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
regex.workspace = true
dirs.workspace = true
tugtool-core.workspace = true

[dev-dependencies]
tempfile = "3"
serial_test = "3"
