[package]
name = "tugrelaunch"
description = "Build-replace-relaunch helper for Tug.app development"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tugrelaunch"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
