[package]
name = "tugtool"
description = "Launcher binary for tugdeck dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tugtool"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
