[package]
name = "tugtool"
description = "Launcher binary for tugdeck dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tugtool"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tugcast-core = { path = "../tugcast-core" }

[dev-dependencies]
tempfile = { workspace = true }
