[package]
name = "tugdiff-wasm"
version = "0.1.0"
edition = "2021"
description.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
imara-diff = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

# `[profile.release]` lives at the workspace root (../Cargo.toml).
# Cargo ignores member-level profiles in a virtual workspace.
