[package]
name = "tugmark-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = { version = "0.12", default-features = false, features = ["html", "simd"] }
wasm-bindgen = "0.2"

# `[profile.release]` lives at the workspace root (../Cargo.toml).
# Cargo ignores member-level profiles in a virtual workspace.
