[package]
name = "tugbank-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SQLite-backed typed defaults store library for tugbank"

[lib]
name = "tugbank_core"
path = "src/lib.rs"

[dependencies]
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
