[package]
name = "tugcast-core"
description = "Protocol types, frame encoding, and feed traits for the tugcast WebSocket multiplexer"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[lib]
name = "tugcast_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
