[package]
name = "tugcast-core"
description = "Protocol types, frame encoding, and feed traits for the tugcast WebSocket multiplexer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "tugcast_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
