[package]
name = "tugcast"
description = "WebSocket multiplexer — bridges terminal, code, filesystem, git, and stats feeds to tugdeck"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tugcast"
path = "src/main.rs"

[dependencies]
arc-swap = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
pty-process = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
sysinfo = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
toml = { workspace = true }
glob = { workspace = true }
percent-encoding = { workspace = true }
tower-http = { workspace = true }
tugcast-core = { path = "../tugcast-core" }
tugbank-core = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
tokio-tungstenite = { workspace = true }
http-body-util = { workspace = true }
tempfile = { workspace = true }
rusqlite = { workspace = true }

