[package]
name = "tugdash-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for tugdash: git-derived worktree work units (dashes)"

[lib]
name = "tugdash_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
rusqlite.workspace = true
tempfile.workspace = true
tugcore.workspace = true
tugmark-core.workspace = true
tugutil-core.workspace = true

[dev-dependencies]
serial_test = "3"
