[package]
name = "tugdash"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "tugdash — standalone git-worktree work units (create/commit/join/release/list/show)"

[[bin]]
name = "tugdash"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tugdash-core.workspace = true
tugutil-core.workspace = true
