[package]
name = "tugexec"
description = "Launcher for tugdeck dashboard — starts tugcast, Vite, and opens browser"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "tugexec"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }
tracing = { workspace = true }
tuglog = { workspace = true }
serde_json = { workspace = true }
tugcast-core = { path = "../tugcast-core" }

[dev-dependencies]
tempfile = { workspace = true }
